restructure the document

--- a/lecture_notes.tex
+++ b/lecture_notes.tex
@@ -28,6 +28,7 @@
   \usepackage[utf8]{inputenc}
   \usepackage{lmodern}
 \fi
+\usepackage{amsfonts}
 
 \usepackage{hyperref}
 \usepackage{sagetex}
@@ -37,6 +38,10 @@
 \usepackage{chngcntr}
 
 \usepackage{bookmark}
+
+\usepackage{version}
+\newenvironment{version}{\relax}{\relax}
+\excludeversion{solution}
 
 % The counting will restart for every part.
 \counterwithin*{section}{part}
@@ -58,430 +63,9 @@
 \maketitle
 
 \setcounter{part}{1}
-\begin{Part*}{
-    title/english=Number Theory,
-    title/magyar =Számelmélet}
+\begin{Part*}{ title/english=Number Theory, title/magyar={Számelmélet}}
   
-  \Wrap{
-    content/english={
-      The \emph{SageMath} application gives the whole structure of integer
-      numbers as the \texttt{ZZ} object which behaves according to the "usual"
-      mathematical definition.},
-    content/magyar ={
-      A \emph{SageMath} programcsomagban az egész számokat a \texttt{ZZ}
-      objektummal kapjuk meg a ,,szokásos``  matematikai definíciónak
-      megfelel\H en.}
-  }
-  \begin{sageexample}
-    sage: type(ZZ)
-  \end{sageexample}
-  
-  \Wrap{
-    content/magyar={
-      Természetesen nem kell minden esetben használnunk a konstruktort, ha egy
-      egész számmal szeretnénk dolgozni, a rendszer automatikusan felismeri.
-    },
-    content/english={
-      Fortunatelly there is no need to use the constructor when we want to
-      create an integer, the system automaticly recognizes such numbers. 
-    }
-  }
-  \begin{sageexample}
-    sage: a,b = ZZ(4), 4
-    sage: type(a) == type(b)
-    sage: a == b
-  \end{sageexample}
-
-  \Wrap{
-    content/magyar={Aritmetiaki m\H uveletek a ,,szokásosak``:},
-    content/english={Arithmetic on integers:}
-  }
-  \begin{itemize}
-    \item 
-      \Wrap{
-        content/magyar={Összeadás, kivonás},
-        content/english={Addition, substraction}
-      }: \texttt{+,-};
-    \item 
-      \Wrap{
-        content/magyar={Szorzás, hatványozás},
-        content/english={Multiplication, raising to a power}
-      }: \texttt{*,\^};
-    \item 
-      \Wrap{
-        content/magyar={Egész érték\H u osztás és maradékképzés},
-        content/english={Division over the integers and residue}
-      }: \texttt{//,\%}.
-  \end{itemize}
-  
-  \Wrap{
-    content/magyar={
-      \emph{Megjegyzés:} A \texttt{/} m\H uvelet eredménye egy racionális
-      szám, sőt valójában a jelenléte elég, hogy innentől racionálisként
-      tekintsen a megadott adatokra.},
-    content/english={
-      \emph{Note:} The result of the \texttt{/} operand is a rational number
-      and in general if this operand  is used then the result's type will 
-      be rational.}
-  }
-  \begin{sageexample}
-    sage: 2/3
-    sage: type(2/3)
-    sage: 1/1
-    sage: type(1/1)
-  \end{sageexample}
-
-\begin{Section}{
-    title/english=Divisor,
-    title/magyar=Oszthatóság}
-
-  \begin{definition}[\Wrap{content/magyar=Osztó, content/english=Divisor}]
-    \Wrap{
-      content/magyar={Az $a$ osztója $b$-nek és $b$ többszöröse $a$-nak, azaz $a|b$, ha},
-      content/english={$a$ is a divisor of $b$ and $b$ is a multiple of $a$ that is to say
-        $a|b$, if}
-    }
-    \[ \exists c: b = ac.\]
-  \end{definition}
-    
-  \begin{exercise}
-    Írd meg azt a függvényt, amely eldönti, hogy az els\H o
-    argumentuma osztható-e a másodikkal az alábbi példán kív\H ul még 4 
-    különböz\H o módon!
-  \end{exercise}
-    
-  \begin{sageexample}
-    sage: def divides0(a,b):
-    ....:     return (a/b).is_integer()
-    sage: divides0(5,2)
-    sage: divides0(6,3)
-  \end{sageexample}
-
-  
-  Oszthatóság tulajdonságai természetes számok esetén:
-  \begin{enumerate}
-    \item Részbenrendezés, azaz
-      \begin{itemize}
-        \item Reflexív ($\forall a\in\mathbb{Z}: a|a$),
-        \item Antiszimmetrikus 
-          ($\forall a,b\in\mathbb{N}: a|b\wedge b|a\Rightarrow a=b$),
-        \item Tranzitív 
-          ($\forall a,b,c\in\mathbb{Z}: a|b \wedge b|c \Rightarrow a|c$);
-      \end{itemize}
-    \item minden szám osztja $0$-t;
-    \item $1$ minden számnak osztója;
-    \item $0$ csak saját magának osztója;
-    \item ha $a|b$ és $c|d$, akkor $ac|bd$;
-    \item ha $a|b$, akkor $\forall k\in \mathbb{Z}: ak|bk$;
-    \item ha $k\in \mathbb{N}\setminus{0}:ak|bk$, akkor $a|b$;
-    \item ha $a|b$ és $a|c$, akkor $a|b+c$;
-    \item egy pozitív szám minden osztója kisebb vagy egyenlő mint a szám maga.
-  \end{enumerate}
-
-  A részbenrendezések, így az oszthatóság is megadható egy speciális objektummal:
-  \texttt{Poset} (\emph{P}artially \emph{O}rdered \emph{S}et).
-  Az ilyen objektumot ábrázolva kapjuk a részberendezések szemléltetésére
-  használt Hasse-diagramot.
-  \begin{sageexample}
-    sage: k = 15
-    ....: P = Poset((Set([2..k]), lambda a,b: b % a == 0))
-  \end{sageexample}
-  \begin{figure}[h!]
-    \centering
-    \sageplot[scale=.6][png]{P.plot(talk=True)}
-    \caption{Hasse-diagram oszthatóság esetén $2$ és $k$ közötti természetes
-    számokon.  (\texttt{P.plot(talk=True)})}
-  \end{figure}
-
-  \begin{exercise} Írj programot, amely egy adott számhalmaz esetén megszámolja hány
-    él van az oszthatóság relációhoz tartozó  Hasse-diagramban! Ellen\H orzésre lehet 
-    használni az alábbi kódot.
-  \end{exercise}
-  \begin{sageexample}
-    sage: len(P.cover_relations_graph().edges())
-  \end{sageexample}
-
-  \begin{exercise} Írj programot, amely egy adott egész szám esetén kiírja
-    osztóinak számát, illetve osztóinak összegét! Ellenőrzéshez
-    használhatjuk a \verb|sigma(n,0)| és \verb|sigma(n,1)| parancsokat.
-  \end{exercise}
-
-  \begin{exercise} Írj programot, amely a természetes számok egy adott
-    halmazában megkeresi a tökéletes számokat (tökéletes szám: osztóinak 
-    összege megegyezik a számmal, pl. 6).
-  \end{exercise}
-  
-  \begin{exercise}{Aliquot} Természetes számok esetén definiálhatjuk a következő
-    sorozatot: $(s_0 = n; s_{i+1} = \sigma(s_i) - s_i)$, ahol a $\sigma(n)$
-    az $n$ osztóinak összege. A sorozat vagy terminál nulla értékkel vagy
-    periódikussá válik. Készíts programot, amely egy adott természetes szám 
-    esetén kiszámolja az említett sorozatot. (Ha nem terminál, akkor csak az 
-    első periódust írja ki.)
-  \end{exercise}
-
-  \begin{definition}[Asszociált] Az $a\neq b$ elemek asszociáltak, ha $a|b$ és 
-    $b|a$ is teljesül.
-  \end{definition}
-
-  \begin{definition}[Egység] Egy $e$ elem egységelem, ha bármely $a$ elemre
-    $a=ea=ae$. Az egységelem asszociáltjait egységeknek hívjuk.
-  \end{definition}
-
-  \begin{definition}[Irreducibilis] Egy nem egység $a$ elemet felbonthatatlannak vagy 
-    irreducibilisnek nevezünk, ha $a=bc$ esetén $b$ és $c$ közül az 
-    egyik egység.
-  \end{definition}
-
-  \begin{definition}[Prím] Egy nem egység $p$ elemet prímnek nevezünk, ha $p|ab$
-    esetén a $p|a$ vagy a $p|b$ közül legalább az egyik teljesül.
-  \end{definition}
-
-  Megjegyzések:
-  \begin{enumerate}
-    \item Az egység és egységelem két külön fogalom, egységelem egyedi, 
-      amíg az is előfordulhat, hogy a struktúra összes eleme egység (pl.: $\mathbb{Q}$).
-    \item Az egység alternatív definíciója: $a$ egység, ha bármely $b$ elem
-      felírható $b=ac$ alakban.
-    \item Minden prímelem egyben irreducibilis is, hiszen \[
-        p = ab \Rightarrow p|ab \Rightarrow p|b \Rightarrow b = qp \Rightarrow
-        p = (aq)p \Rightarrow a \text{ egység}.
-      \]
-    \item Természetes számok esetén (és minden Gauss-gy\H ur\H uben), ha egy
-      elem irreducibilis, akkor prím is.
-    \item Lehet olyan struktúrát mutatni, ahol van olyan irreducibilis elem,
-      ami nem prímelem. Például ha tekintjük az egész konstans taggal rendelkező
-      egyváltozós polinomokat, azaz a $\mathbb{Z} + x\mathbb{R}[x]$ struktúrát,
-      akkor az $x$ felbonthatatlansága nyilvánvaló; ugyanakkor az
-      $x|(x\sqrt{2})^2$ teljesül, de $x$ nem osztja $x\sqrt{2}$-t, ui. az 
-      osztás eredményének is benne kellene lennie a struktúrában, de 
-      $\sqrt{2}\notin\mathbb{Z}$. 
-  \end{enumerate}
-
-  \begin{exercise} A $\mathbb{Z}_m$ struktúra alatt a ${0,1,\dots, m-1}$
-    számokat értjük úgy, hogy az összeadás és szorzás műveletet $\mod m$ értjük.
-    Írj programot amely egy adott $m$ esetén definíció alapján meghatározza az 
-    egységeket, irreducibiliseket és prímeket!
-  \end{exercise}
-
-  Természetes számok esetén nyilvánvaló, hogy végtelen sok prím van, hiszen ha
-  feltennénk, hogy véges sok van, akkor azokat összeszorozva és az eredményt
-  eggyel megnövelve olyan számot kapnánk, aminek egyik sem osztója.
-  A prímek számára becslést az $\frac{x}{\ln x}$ formulával kaphatunk, amíg
-  \emph{SageMath}-ban a \texttt{prime\_pi(x)} függvénnyel kaphatjuk meg a
-  pontos számukat.
-  \begin{sageexample}
-    sage: P1 = plot(x/log(x), (2, 200), scale='semilogy', \
-    ....:     fill=lambda x: prime_pi(x),fillcolor='red')
-    ....: P2 = plot(1.13*log(x), (2, 200), \
-    ....:     fill=lambda x: nth_prime(x)/floor(x), fillcolor='red')
-    ....: P = graphics_array([P1, P2])
-  \end{sageexample}
-  \begin{figure}[ht]
-    \centering
-    \sageplot[scale=.6]{P,figsize=[8,4]}
-    \caption{Prímek számának és növekedésének becslése (\texttt{P1,P2}) }
-  \end{figure}
-
-  \begin{theorem}[Számelmélet alaptétele] Minden pozitív természetes szám a 
-    sorrendtől eltekintve egyértelműen felírható prímszámok szorzataként.
-  \end{theorem}
-
-  \begin{exercise}[Erasztotenész szitája] Adj programot, amely megadja az 
-    összes prímet egy adott számig, azaz ugyanazt az eredmény adja mint a 
-    $\mathtt{primes\_first\_n(n)}$!
-  \end{exercise}
-
-  \begin{exercise} Írd meg az előző feladatot hatékonyabban úgy, hogy a páros
-    számok ne is kerüljenek be a táblába!
-  \end{exercise}
-
-  \begin{exercise} Írd meg a prímszitát úgy, hogy a $2,3$ és $5$-tel osztható
-    számok ne kerüljenek a táblába! Ehhez a számokat $30i+M[j]$ alakban tárold
-    ($30=2\cdot 3\cdot 5$), ahol $i\in[1,\lceil n\rceil]$; $j\in[1,8]$ és
-    $M=[1,7,11,13,17,19,23,29]$.
-  \end{exercise}
-
-  \begin{exercise}[Ikerprímek]
-      Természetes számok esetén az olyan prímeket melyeknek különbsége 2
-      ikerprímeknek hívjuk. Írj programot, amely megkeresi az összes ikerprímet
-      adott $a$ és $b$ között.
-  \end{exercise}
-
-  \begin{definition}[Legnagyobb közös osztó]
-    Az $a$ és $b$ legnagyobb közös osztója az a $c = (a,b)$, amelyre
-    \[ c|a \wedge c|b \wedge \forall d: d|a \wedge d|b \Rightarrow d|c. \]
-    Ha a struktúrában van ,,szokásos`` rendezés (ilyen az egész számok), akkor ezek 
-    közül csak a legnagyobbat tekintjük legnagyobb közös osztónak. (Például a 12
-    és 18 egész számokra a 6 és -6 is megfelelő lenne, de (12,18)=6.)
-  \end{definition}
-
-  \begin{exercise}
-    Írj programot, kiszámolja a legnagyobb közös osztót a $\mathtt{factor}$
-    parancs segítségével! Tesztelésre használható a $\mathtt{gcd(a,b)}$ parancs.
-  \end{exercise}
-
-  \begin{definition}[Legkisebb közös többszörös]
-    Az $a$ és $b$ legkisebb közös többszöröse az a $c$, amelyre $c\cdot(a,b)=ab$.
-  \end{definition}
-
-  \begin{exercise}
-    Írj programot, kiszámolja a legkisebb közös többszöröst a $\mathtt{factor}$
-    parancs segítségével (és gcd használata nélkül)! Tesztelésre használható a
-    $\mathtt{lcm(a,b)}$ parancs.
-  \end{exercise}
-
-  \begin{definition}[Relatív prím]
-    Ha $(a,b)=1$, akkor $a$ és $b$ relatív prímek.
-  \end{definition}
-
-  \begin{definition}[Euklideszi algoritmus] A legnagyobb közös
-    osztója $a$-nak és $b$-nek kiszámolható a következ\H o algoritmussal
-    (amennyiben van maradékos osztás a struktúrában):
-    \begin{enumerate}
-      \item Legyen $a = qb + r$, ahol $0 \le r < b$. 
-      \item Ha $r = 0$, akkor a legnagyobb közös osztó $a$.
-      \item $b \leftarrow a$
-      \item $a \leftarrow  r$
-      \item Ugorjunk (1)-re.
-    \end{enumerate}
-  \end{definition}
-
-  \begin{exercise}
-    Készítsd el a fenti algoritmust és hasonlítsd össze a korábbi legnagyobb
-    közös osztót számoló program futási idejével!
-  \end{exercise}
-  
-  \begin{exercise}[Binary GCD] Írj programot a legnagyobb közös osztó kiszámolására, ami
-    csak additív és shift műveleteket használ (hatékony
-    számítógépen) az alábbi összefüggéseket használva!
-    \begin{itemize}
-      \item $(2a,2b) = 2(a,b)$,
-      \item $(2,b)=1 \Rightarrow (2a,b) = (a,b)$,
-      \item $(a,b) = (a-b,b)$ és így ha $a$ és $b$ is páratlan, akkor $a-b$
-        páros.
-    \end{itemize}
-  \end{exercise}
-
-  \begin{theorem} 
-    Létezik olyan $x$ és $y$, amelyekre \[ ax+by=(a,b). \]
-  \end{theorem}
-  
-  \begin{definition}[B\H ovített Euklideszi algoritmus] 
-    Az $(a,b)$ és a hozzá tartozó $x$, $y$ értékek ($(a,b)=ax+by$) meghatározására szolgáló
-    algoritmus. A hagyományos algoritmushoz hasonlóan a maradékokat ($r_i$)
-    fogjuk számolni az \[r_i = r_{i-2} - q_ir_{i-1}\] alakban, továbbá használjuk
-    az \[
-      \begin{array}{rcl}
-        ax_i+by_i & = & r_i \\
-                  & = & r_{i-2} - q_ir_{i-q} \\
-                  & = & (ax_{i-2} + bx_{i-2}) - q_i(ax_{i-1} + by_{i-1}) \\
-                  & = & a(x_{i-2} - q_ix_{i-1}) + b(y_{i-2} - q_iy_{i-1})
-      \end{array}
-    \] invariánst. Ennek eleget téve az algoritmus
-    \begin{enumerate}
-      \item $x_0, y_0, r_0 \leftarrow 1, 0, a$;
-      \item $x_1, y_1, r_1 \leftarrow 0, 1, b$;
-      \item $i \leftarrow 1$
-      \item Ha $r_i = 0$ akkor a megoldás $(x_i,y_i,r_i)$, különben $i\leftarrow i+1$;
-      \item $q_i \leftarrow \lfloor r_{i-2}/r_{i-1}\rfloor$
-      \item $x_i, y_i, r_i \leftarrow x_{i-2}-q_ix_{i-1}, y_{i-2}-q_iy_{i-1},
-        r_{i-2}-q_ir_{i-1}$
-      \item Ugorjunk (4)-re.
-    \end{enumerate}
-  \end{definition}
-
-  \begin{exercise} Írj programot, ami a bővített Euklideszi algoritmust
-    valósítja meg természetes számokra! Ellen\H orzéshez használható az 
-    $\mathtt{xgcd}$ parancs.
-  \end{exercise}
-  
-  \begin{definition}[(Lineáris) Diofantikus probléma]
-    Az $a,b,c\in\mathbb{Z}$ számok esetén az $ax+by=c$ egyenletet az egész
-    számok fölött (egész megoldásokat keresünk) lineáris Diofantikus 
-    egyenletnek hívunk.
-  \end{definition}
-
-  A megoldások számának vizsgálatánál először észrevehet\H o, hogy $(a,b)$
-  osztja a bal oldalt, hiszen $a$-nak és $b$=nek is osztója, így a jobb oldalt
-  is kell osztania. Ez azt jelenti, hogy csak akkor van megoldás, ha $(a,b)|c$.
-  Viszont ebben az esetben biztosan van megoldás hiszen a b\H ovített
-  Euklideszi algoritmussal kaphatunk  egyet, ha annak kimenetét megszorozzuk
-  $c/(a,b)$-vel ($x_0, y_0$). Ha van még további megoldás, akkor az felírható
-  az $(x_0 + x', y_0 + y')$ alakban alkalmas $x',y'$ számokkal. Ekkor \[
-    a(x_0+x')+b(y_0+y') = c = ax_0 + by_0,\] azaz \[ ax' = -by'. \]
-  A jobb oldal osztható $b$-val, így a bal is, tehát \[
-    \begin{array}{lclrl}
-      \displaystyle b|ax' \Rightarrow \frac{b}{(a,b)}|x' & \Rightarrow &  
-      x'= & &  \displaystyle t\frac{b}{(a,b)} \\
-      \displaystyle ax' = -by' \Rightarrow at\frac{b}{(a,b)} = -by' & \Rightarrow &
-      y'= & - & \displaystyle t\frac{a}{(a,b)}\\
-    \end{array}\qquad (t\in\mathbb{Z}).\]
-  Összefoglalva, ha van megoldás akkor végtelen sok van és egy tetsz\H oleges
-  $(x_0, y_0)$ megoldásból a többit a 
-  \[
-    x_t = x_0 + t\frac{b}{(a,b)}\qquad y_t= y_0-t\frac{a}{(a,b)}\qquad(t\in\mathbb{Z})\]
-  formulákkal kaphatjuk.
-
-  \emph{Megjegyzés:} A lineáris Diofantikus probléma elképzelhet\H o egy úgy
-  is, hogy az egyenlet egy egyenes egyenlete a síkon és a kérdés az, hogy
-  ennek az egyenesnek van-e és mennyi metszéspontja van az egész számok segítségével
-  készített ráccsal. A fenti megoldás itt annak felel meg, hogy megpróbáljuk 
-  egész érték\H u eltolással elmozdítani az egyenes egy pontját az origóba. Ha
-  sikerül az az jelenti, hogy a ráccsal közös pontok( az origón kívül) a
-  meredekségnek $\frac{a}{b}=\frac{a/(a,b)}{b/(a,b)}$ megfelel\H o négyzetek 
-  megfelel\H o csúcsai lesznek..
-
-  \begin{exercise} Valósítsd meg a $\mathtt{LinDiofantianEq}$ osztályt a
-    következőeknek megfelelően!
-    \begin{itemize}
-      \item Konstruktorában kell megadni az $a,b,c$ értékeket.
-      \item Van egy $\mathtt{is\_solvable}$ függvénye.
-      \item Fel tudja sorolni a megoldásokat egy $\mathtt{next\_solution}$ és
-        egy $\mathtt{prev\_solution}$ függvény segítségével.
-      \item Az első megoldás, amivel a $\mathtt{next\_solution}$ visszatér az
-        legyen, amely esetén az $x$ a legkisebb nemnegatív szám.
-      \item Csak egy megoldást tároljunk az objektum használata közben.
-    \end{itemize}
-  \end{exercise}
-
-  \begin{exercise}
-    Hányféleképpen tudunk kifizetni 100000 peng\H ot 47 és 79 peng\H os
-    érmékkel?
-  \end{exercise}
-
-
-  \begin{exercise}
-    Egy üzletben háromféle csokoládé kapható, 70, 130 és 150 forint
-    egységárban. Hányféleképpen lehet pontosan 5000 forintért 50 
-    darab csokoládét venni?
-  \end{exercise}
-    
-  \begin{exercise}
-    Írj programot, amely a három argumentuma ($a,b,c$) visszatér hány
-    megoldása van az $ax+by=c$ diofantikus problémának a természetes 
-    számok felett (nemnegatív megoldások)!
-  \end{exercise}
-
-  \begin{exercise}
-    Írd meg a \[ \mathtt{multi(L, c, s=0)} \]
-    függvényt, amelyre
-    \begin{itemize}
-      \item $\mathtt{L}$ lista elemei $a_0,a_1,\dots$;
-      \item visszatérési érték a \[ \sum_{i=0}^{\mathtt{len(L)}} a_ix_i = c \]
-        egyenlet nemnegatív egész megoldásainak száma $\mathtt{s=0}$ esetén,
-        különben
-      \item azon megoldások száma, amelyek még teljesítik a 
-        \[ \sum_{i=0}^{\mathtt{len(L)}} x_i = s \]
-        feltételt is.
-    \end{itemize}
-  \end{exercise}
-\end{Section}
-
-\begin{section}{Kongruenciák}
-  %%% \begin{definition}[Kongruens]
-    % Az $a$ és $b$ kongruens modulo $m$, ha 
-  % \end{definition}
-\end{section}
+  \input{number-theory/00.tex}
 
 \end{Part*}
 
