added polynomials and some changes in congruent

--- a/number-theory/00.tex
+++ b/number-theory/00.tex
@@ -82,3 +82,11 @@
   \input{number-theory/02-congruent.tex}
 
 \end{Section}
+
+\begin{Section}{
+  title/english=Polynomials,
+  title/magyar=Polinomok}
+
+  \input{number-theory/03-polynomials.tex}
+
+\end{Section}
