--- a/number-theory/02-congruent.tex
+++ b/number-theory/02-congruent.tex
@@ -92,20 +92,20 @@
 
 \begin{definition}[\Wrap{content/magyar=Lineáris kongruenciák, content/english=Linear congruence}]
   \Wrap{
-    content/magyar={Az $a,b$ egész és $m$ pozitív egész számok esetén a \[ax\equiv b\ (m)\] alakú
-      kongruenciákat \emph{lineáris kongruenciának} hívjuk.},
+    content/magyar={Az $a,b$ egész és $m$ pozitív egész számok esetén az \[ax\equiv b\ (m)\] alakú
+      kifejezéseket \emph{lineáris kongruenciának} hívjuk.},
     content/english={TODO}.
   }
 \end{definition}
 
 \Wrap{
-  content/magyar={A kongruencia és oszthatóság definíciót használva kapjuk, hogy},
+  content/magyar={A kongruencia és oszthatóság definíciókat használva kapjuk, hogy alkalmas $y$-al},
   content/english={TODO}
 }
 \[ ax\equiv b\ (m) \Leftrightarrow m|ax-b \Leftrightarrow ax-b = my \Leftrightarrow ax-my=b.\]
 \Wrap{
-  content/magyar={Tehát a lineáris kongruencia megoldásait megkaphatjuk a megfelelő lineáris
-    diofantikus probléma megoldásával, ami alapján},
+  content/magyar={Ez azt jelenti, hogy egy lineáris kongruencia megoldását megkaphatjuk a
+    megfelelő lineáris diofantikus probléma megoldásával. Továbbá},
   content/english={TODO}
 }
 \begin{itemize}
@@ -116,7 +116,7 @@
     }
   \item
     \Wrap{
-      content/magyar={$acx\equiv bc\ (cm)$ kongruencia megoldásait megkaphatjuk a
+      content/magyar={$acx\equiv bc\ (cm)$ kongruencia megoldásait megkaphatjuk az
         $ax\equiv b\ (m)$ kongruenca megoldásával;},
       content/english={TODO}
     }
@@ -146,18 +146,26 @@
 
 \begin{definition}[\Wrap{content/magyar={Moduláris inverz}, content/english=Modular inverse}]
   \Wrap{
-    content/magyar={Az $ax\equiv 1\ (m)$ kongruenciának megoldását (ha van) az $a$ szám
+    content/magyar={Az $ax\equiv 1\ (m)$ kongruencia megoldását (ha van) az $a$ szám
       \emph{moduláris inverz}ének nevezzük modulo $m$.},
     content/english={TODO}
   }
 \end{definition}
 
+\begin{exercise}
+  \Wrap{
+    content/magyar={Írj programot, amely kiszámolja első paraméterének moduláris inverzét modulo
+      a második paraméter! Ellenőrzéshez használható az \texttt{inverse\_mod} parancs},
+    content/english={TODO}
+  }
+\end{exercise}
+
 \begin{definition}[\Wrap{content/magyar=Lineáris kongruencia-rendszer, content/english=System of congruences}]
   \Wrap {
     content/magyar={Legyen $1<n\in\mathbb{N}$, $a_i,b_i\in\mathbb{Z}$ és $1<m_i\in\mathbb{N}$
-      ($1\le i\le n$). Ekkor a \[a_ix\equiv b_i\ (m_i) \quad(1\le i\le n)\] kongruenciákat \emph{lineáris
-      kongruencia-rendszer}nek hívunk és csak olyan $x$ egész számot tekintünk megoldásnak, amely
-      mindegyiknek külön-külön is megoldása.},
+      ($1\le i\le n$). Ekkor a \[a_ix\equiv b_i\ (m_i) \quad(1\le i\le n)\] kongruenciák összeségét
+      \emph{lineáris kongruencia-rendszer}nek hívunk és csak olyan $x$ egész számot tekintünk
+      megoldásnak, amely mindegyiknek külön-külön is megoldása.},
     content/english={TODO}
   }
 \end{definition}
@@ -166,8 +174,105 @@
   content/magyar={ A kongruenciarendszerek megoldásának megkereséséhez tekintsünk csak két
     kongruenciát és első lépésként oldjuk meg őket külön-külön. Ezek után a feladat az
     \[ x\equiv c_1 (m_1)\text{ és } x\equiv c_2 (m_2), \] kongruenciarendszer megoldásainak
-    megtalálása.
+    megtalálása. A fentieknek megfelelően ez azt jelenti, hogy arra alkalmas $y_1$ és $y_2$
+    számokkal \[
+      \left.
+      \begin{array}{ccc}
+        m_1|x-c_1 & \Leftrightarrow & x = c_1 + m_1y_1 \\
+        m_2|x-c_2 & \Leftrightarrow & x = c_2 + m_2y_2
+      \end{array}
+      \right\}\Rightarrow c_1-c_2 = m_1y_1 - m_2y_2,
+    \]
+    ami tetszőleges $c_1, c_2$ esetén csak akkor lehetséges, ha $m_1$ és $m_2$ relatív prímek.
   },
+  content/english={TODO}
+}
+
+\Wrap{
+  content/magyar={Az általános megoldás megtalálásához az előzőek alapján tegyük fel, hogy
+    $(m_1, m_2)=1$ és keressük $x$-et $x=x_1+x_2$ alakban, ahol \[
+      \begin{array}{ccccccccc}
+        x_1 & \equiv & c_1 & (m_1) & \quad & x_1 & \equiv & 0   & (m_2) \\
+        x_2 & \equiv & 0   & (m_1) & \quad & x_2 & \equiv & c_2 & (m_2).
+      \end{array}
+    \]
+    Ebből $x_1$-re $m_1|x_1-c_1$ és $m_2|x_1$, azaz $m_1u_1 = x_1-c_1$ és $m_2v_2 = x_1$, tehát
+    ha $m_1u+m_2v=1$, akkor \[
+      c_1 = m_1u_1-m_2v_1 = m_1uc_1 + m_2vc_1.
+    \]Így $x_1=c_1-m_1uc_1 = m_2vc_1$ és hasonlóan $x_2=c_2-m_2vc_2=m_1uc_2$. Ez alapján azt
+    kaptuk, hogy a fenti két kongruenciából álló rendszer egy megoldása \[ x = c_1m_2v + c_2m_1u. \]
+  },
+  content/english={TODO}
+}
+
+\Wrap{
+  content/magyar={Az nyilvánvaló, hogy az $x+km_1m_2$ is megoldás lesz tetszőleges $k$ egész
+    számra, továbbá a megoldás egyértelmű is modulo $m_1m_2$, mivel bármely két megoldás
+    különbsége 0 modulo $m_1$ és $m_2$ is, azaz a megoldások közötti különbség a $[m_1,m_2]$
+    többszöröse kell hogy legyen. },
+  content/english={TODO}
+}
+
+\begin{theorem}[\Wrap{content/magyar=Kínai maradéktétel (KMT), content/english=Chinese remainder theorem (CRT)}]
+  \Wrap{
+    content/magyar={Legyenek $m_1,m_2,\dots,m_n$ egynél nagyobb páronként relatív prím természetes
+      számok. Ekkor az $x\equiv c_i\ (m_i)$ $(1\le i\le n)$ kongruenciarendszernek van megoldása
+      és a megoldások kongruensek modulo $m_1m_2\dots m_n$, bármely egész $c_1, c_2,\dots c_n$ egész
+      esetén.},
+    content/english={TODO}
+  }
+\end{theorem}
+
+\begin{exercise}
+  \Wrap{
+    content/magyar={Írj eljárást, amely a kínai maradéktétel megoldását állítja elő. Az
+      programnak két lista típusú bemenete legyen, az egyik a kínai maradéktételnél
+      szereplő $c$ számok a másik pedig a (páronként relatív prím) modulusok. Ellenőrzéshez
+      használható a \texttt{crt} parancs.},
+    content/english={TODO}
+  }
+
+  \begin{solution}
+    TODO
+  \end{solution}
+\end{exercise}
+
+\begin{exercise}
+  \Wrap{
+    content/magyar={Írj eljárást amely lineáris kongruencia-rendszereket old meg! A programnak
+      három lista típusu bemenete van: a bal oldalak együtthatóinak, a jobb oldalaknak és a
+      modulusoknak listái.},
+    content/english={TODO}
+  }
+
+  \begin{solution}
+    TODO
+  \end{solution}
+\end{exercise}
+
+\Wrap{
+  content/magyar={A lineáris egyenletek mellett természetesen magasabb rendű és más típusú
+    egyenletek is elképzelhetőek. Ezek megoldása általában más problémákat vet fel mint valós
+    vagy akár komplex megfelelőjük, de mivel a keresett megoldás egy véges halmazban van, a
+    legrosszabb esetben is megkaphatjuk a megoldást végigpróbálva az összes lehetséges értéket.},
+  content/english={TODO}
+}
+
+\begin{exercise}[\Wrap{content/magyar=Kvardratikus maradékok, content/english=Quadratic residues}]
+  \Wrap{
+    content/magyar={Írj programot, amely egy adott $m$ esetén megadja azon $0$ és $m-1$
+    közötti számok halmazát, amelyek megoldásai lehetnek a\[ x^2 \equiv b\ (m) \] egyenletnek tetszőleges $b$-re
+      vagy adott $b$-re attól függően, hogy a második paraméter adott-e.},
+    content/english={TODO}
+  }
+  \begin{solution}
+    TODO
+  \end{solution}
+\end{exercise}
+
+\Wrap{
+  content/magyar={Matematikában és az informatikai alkalmazások területén is fontos szerepe van a
+    \[ a^x\equiv b\ (m) \] típusú (logaritmushoz hasonló) egyenleteknek. },
   content/english={TODO}
 }
 
