--- a/number-theory/02-congruent.tex
+++ b/number-theory/02-congruent.tex
@@ -312,3 +312,5 @@
   $g^a$ és $g^b$ publikus értékeket. Ezek alapján mindketten ki tudják számolni a közös kulcsot:
   \[g^{ab} = (g^a)^b = (g^b)^a.\]
 \end{definition}
+
+% TODO put the cryptograhpy part in the coding theory as separate section
